@@ -79,6 +79,10 @@ David Harr
 Troy Edwards
 		Authored the source RPM spec file for GraphicsMagick.
 
+Milan Votava
+		Contributed support for Wireless BitMap, used in WAP -
+		Wireless Access Protocol.
+
 Additional Acknowledgements
 ===========================
 
