@@ -53,6 +53,18 @@
 </tr>
 </table>
 <p>
+2003-08-29  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> PerlMagick/Magick.xs: Add support for CopyCyan, CopyMagenta,
+        CopyYellow, and CopyBlack, composition operators.
+  <LI> magick/composite.c (CompositeImage): Added support for
+        CopyCyanCompositeOp, CopyMagentaCompositeOp,
+        CopyYellowCompositeOp, and CopyBlackCompositeOp, composition
+        operators.
+
+</UL>
+<p>
 2003-08-28  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
